--- a/templates/frontend/base.html
+++ b/templates/frontend/base.html
@@ -9,9 +9,12 @@
     <link rel="stylesheet" href="{% static './lib/fontawesome/css/all.min.css' %}">
 
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+</style>
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a style = "font-family: 'Lobster', cursive;" class="navbar-brand" href="#" >STW</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,10 +31,7 @@
                     <a class="nav-link" href="{% url 'contact' %}">Contact <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+         
         </div>
     </nav>
     {% block content %}
