--- a/templates/frontend/about.html
+++ b/templates/frontend/about.html
@@ -1,13 +1,22 @@
 {% extends 'frontend/base.html' %}
-{% block title %} About {% endblock %}
+{% block title %} Profile {% endblock %}
 {% block content %}
-<div class="jumbotron"> 
-    <h1 class="display-3">About page</h1>
-    <p class="lead">Jumbo helper text</p>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+</style>
+
+<div class="jumbotron" > 
+    <h1 style="font-family: 'Kanit', sans-serif;" class="display-3">Profile</h1>
+    {% load static %}
+    <p class="lead" style="font-family: 'Kanit', sans-serif;" >Setthawat Yingyonchai <24.08.1999></p> <img src="{%static "img/peam.png" %}" alt="peam" width="300" height="300"> 
     <hr class="my-2">
-    <p>More info</p>
-    <p class="lead">
-        <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
+    <h2 style="font-family: 'Kanit', sans-serif;" >Education</h2>
+    <p style="font-family: 'Kanit', sans-serif;" class="lead">
+        (1) Information Engineering at King Mongkut's Institute of Technology Ladkrabang (2018-Present)
+        <img src="{%static "img/km.png" %}" alt="peam" width="120" height="100"> 
+        <br>
+        (2) Mahidol Wittayanusorn School (2015-2018)
+        <img src="{%static "img/logoMWITS.png" %}" alt="peam" width="100" height="100"> 
     </p>
 </div>
 {% endblock %}
