--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -1,13 +1,53 @@
 {% extends 'frontend/base.html' %}
 {% block title %} Home {% endblock %}
 {% block content %}
-<div class="jumbotron"> 
-    <h1 class="display-3">My Home page</h1>
-    <p class="lead">Jumbo helper text</p>
-    <hr class="my-2">
-    <p>More info</p>
-    <p class="lead">
-        <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-    </p>
+<style>
+#test{
+  color:white;
+}
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+</style>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="w-100 p-3" src="/static/img/168976.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h1 style="color:white;font-family: 'Kanit', sans-serif;">ช่องเขาขาด</h1>        
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="w-100 p-3" src="/static/img/168968.jpg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+        <h1 style="color:white;font-family: 'Kanit', sans-serif;">ถ้ำกระแซ</h1>        
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="w-100 p-3" src="/static/img/168970.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h1 style="color:white;font-family: 'Kanit', sans-serif;">ร้านอาหารคีรีธารา</h1>        
+      </div>
+    </div>
+     <div class="carousel-item">
+      <img class="w-100 p-3" src="/static/img/168973.jpg" alt="Third slide">
+       <div class="carousel-caption d-none d-md-block">
+        <h1 style="color:black;font-family: 'Kanit', sans-serif;" >ช่องเขาขาด</h1>        
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<div style = "  background-color:white;"class="jumbotron"> 
+ {% load static %}
+    <h1 style="text-align:center;font-family: 'Roboto Mono', monospace;" class="display-3" color="#000000" > Welcome Stranger </h1>
+   
 </div>
 {% endblock %}
