--- a/templates/frontend/about.html
+++ b/templates/frontend/about.html
@@ -16,7 +16,7 @@
         <img src="{%static "img/km.png" %}" alt="peam" width="120" height="100"> 
         <br>
         (2) Mahidol Wittayanusorn School (2015-2018)
-        <img src="{%static "img/logoMWITS.png" %}" alt="peam" width="100" height="100"> 
+        <img src="{%static "img/LogoMWITS.png" %}" alt="peam" width="100" height="100"> 
     </p>
 </div>
 {% endblock %}
