--- a/templates/frontend/base.html
+++ b/templates/frontend/base.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'about' %}">Profile <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'contact' %}">Contact <span class="sr-only">(current)</span></a>
